--- a/Http/PortalWindow.xaml
+++ b/Http/PortalWindow.xaml
@@ -30,5 +30,15 @@
                 FontSize="18"
                 Margin="10 10 30 10"
                 Click="ApiRequests_Click"/>
+        <Button x:Name="ApiCoincap"
+                Content="5. Запросы API - 2"
+                FontSize="18"
+                Margin="10 10 30 10"
+                Click="ApiCoincap_Click"/>
+        <Button x:Name="SmtpButton"
+                Content="6. SMTP, E-Mail"
+                FontSize="18"
+                Margin="10 10 30 10"
+                Click="SmtpButton_Click"/>
     </StackPanel>
 </Window>
